# buffer

./: CMakeLists.txt  README.md  buffer.h++  main.c++
include/: buffer.h++  color.h++  types.h++
include/buffer/: internal_debug.h++
src/: buffer.c++
src/buffer/: addr_hex_.c++  allocate.c++  byte.c++  char_length_.c++  continuation_byte_.c++  debug_activate_.c++  debug_is_activated_.c++  from_file_.c++  from_string_.c++  get.c++  get_allocated_.c++  get_from_string_.c++  get_has_registry_.c++  get_manual_.c++  get_read_.c++  insert_metadata_.c++  make_stream.c++  metadata.c++  operator.c++  process_bytes_.c++  read.c++  reset.c++  set_allocated_.c++  set_from_string_.c++  set_has_registry_.c++  set_internal_debug_.c++  set_manual_.c++  set_read_.c++  size.c++  stream.c++  string.c++  to_string.c++  unset_allocated_.c++  unset_from_string_.c++  unset_has_registry.c++  unset_manual_.c++  unset_read_.c++  write.c++
src/buffer/internal_debug/: internal_debug.c++
src/buffer/stream/: stream.c++
src/buffer/stream_/: stream_.c++
tests/buffer/: buffer.c++  size.c++  stream.c++
